--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 
 
     <build>
+        <sourceDirectory>Server/src</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
